New RFind patent

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
 					<div class="desc">
 						<b>Methods and Apparatus for Wideband Localization</b><br>
 						Zhihong Luo, Qiping Zhang, Nicholas Selby, Yunfei Ma, Manish Singh, and Fadel Adib<br>
-						U.S. Patent Nos. <a rel="external" href="https://patents.google.com/patent/US10575277B2/" target="_blank" aria-label="Patent #10,575,277">10,575,277</a>, <a href="https://patents.google.com/patent/US10921419B2/" target="_blank" aria-label="Patent #10,921,419">10,921,419</a>, and <a rel="external" href="https://patents.google.com/patent/US10701662B2/" target="_blank" aria-label="Patent #10,701,662">10,701,662</a><br>
-						Published 2020 and 2021
+						U.S. Patent Nos. <a rel="external" href="https://patents.google.com/patent/US10575277B2/" target="_blank" aria-label="Patent #10,575,277">10,575,277</a>, <a href="https://patents.google.com/patent/US10921419B2/" target="_blank" aria-label="Patent #10,921,419">10,921,419</a>, <a rel="external" href="https://patents.google.com/patent/US10701662B2/" target="_blank" aria-label="Patent #10,701,662">10,701,662</a>, and <a rel="external" href="https://patents.google.com/patent/US11604250B2/" target="_blank" aria-label="Patent #11,604,250">11,604,250</a><br>
+						Published 2020–2023
 					</div>
 				</div>
 	
