--- a/selected-work.html
+++ b/selected-work.html
@@ -71,6 +71,14 @@
 					<h2>TeachBot</h2>
 				</div>
 			</a>
+
+			<a class="project" aria-label="Offline-First Education" href="spi.html">
+				<img src="selected-work/spi.jpg" alt="Student using a tablet behind a microcontroller device">
+				<div class="proj-overlay">
+					<div class="hashtags">#education #raspberry-pi #refugees</div>
+					<h2>Offline-First Education</h2>
+				</div>
+			</a>
 			
 			<a class="project" aria-label="Wireless Sensing" href="rfind.html">
 				<img src="selected-work/rfind.jpg" alt="Smart phone displaying a schematic of a living room">
