Publish guide to Kenya

--- a/blog.html
+++ b/blog.html
@@ -36,6 +36,19 @@
 	</header>
 
 	<main>
+		<a class="item" aria-label="Nairobi Bound: A Comprehensive Guide for Americans Starting a New Life in Kenya's Capital" href="guide-to-kenya.html">
+			<p class="date">May 24, 2023</p>
+			<div class="w-img">
+				<img src="blog/kenya.jpg" alt="My friends and I feeding a giraffe">
+				<div>
+					<h2>Nairobi Bound: A Comprehensive Guide for Americans Starting a New Life in Kenya's Capital</h2>
+					<p class="teaser">When I moved to Kenya in February 2022, I had never been to Africa, and my closest friend lived two countries away. This is a collection of everything I wish I knew before I moved.</p>
+				</div>
+			</div>
+		</a>
+
+		<div class="separator"></div>
+		
 		<a class="item" aria-label="Phishing Prevention on a Budget: How to Test and Train Your Employees for Free" href="phishing.html">
 			<p class="date">March 28, 2023</p>
 			<div class="w-img">
@@ -48,6 +61,7 @@
 		</a>
 
 		<div class="separator"></div>
+		
 		<a class="item" aria-label="I2R Losses in Single- and Three-Phase Distribution Networksy" href="line-losses.html">
 			<p class="date">March 4, 2023</p>
 			<div class="w-img">
