--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -76,7 +76,7 @@
 
 			<p>Neighborhoods I would recommend: Parklands, Westlands, Kilimani, Lavington, Kilileshwa, New Kitisuru, and Spring Valley. These are nice, affordable compared to many US cities, and near fun nightlife. For example, I live in Spring Valley in a mansion in a gated community with three flatmates. The rent is $830 per month and includes a gardener, house help that comes three times a week, a backup generator for load shedding, and basic utilities. It's by far the nicest place I've ever lived for one of the cheapest rents.</p>
 
-			<p>There are even nicer neighborhoods in Nairobi: Karen, Rhunda, Muthaiga, and Gigiri. They tend to be further away from the city center and thus quieter, more like extravagant suburbs. There are also plenty of less expensive places like Githurai and Mitini if you like living in denser mixed-use/apartment buildings.</p>
+			<p>There are even nicer neighborhoods in Nairobi: Karen, Runda, Muthaiga, and Gigiri. They tend to be further away from the city center and thus quieter, more like extravagant suburbs. There are also plenty of less expensive places like Githurai and Mitini if you like living in denser mixed-use/apartment buildings.</p>
 		</section>
 
 		<section id="Food">
