--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -65,7 +65,7 @@
 			<p>The Kenyan work permit system is frustrating and strange sometimes, and always very slow. You will need to progress through three levels to get fully permitted to work in Kenya. In reverse order:</p>
 			<ul>
 				<li>The end goal for most foreigners who want to live in Kenya is a <b>Work Permit</b>. This lasts for two years, is renewable, and costs something like $2000.</li>
-				<li>To apply for a work permit, one must already be physically in Kenya on a <b>Special Pass</b>. This is an intermediate permit that exists only as bureaucratic nonsense. Basically, there's a rule that you can't apply for a Work Permit while in the country on a Tourist Visa, so, here, boom, an intermediate step to make it legal. Special Passes cost around $450 and are valid for three months. However, they often need to be renewed because Work Permit application processing takes so long. Weirdly, you can only be in Kenya on a Special Pass for 6 months out of any 12. This is all such annoying trivia on which to waste brain space, but it is what it is. At least it's more humane than the US immigration system.</li>
+				<li>To apply for a work permit, one must already be physically in Kenya on a <b>Special Pass</b>. This is an intermediate permit that exists only as bureaucratic nonsense. Basically, there's a rule that you can't apply for a Work Permit while in the country on a Tourist Visa, so, here, boom, an intermediate step to make it legal. Special Passes cost around $450 and are valid for three months. However, they often need to be renewed because Work Permit application processing takes so long. Weirdly, you can only be in Kenya on a Special Pass for 6 months out of any 12. This is all such annoying trivia on which to waste brain space, but it is what it is. At least it's more humane than the U.S. immigration system.</li>
 				<li>Finally, to enter the country in the first place, you need a <b>Tourist Visa</b>. It used to be possible to get these on arrival, but as part of a COVID-related rule change, visitors must now apply for it online ahead of time. I believe the cost is around $50 for a basic, single-entry Tourist Visa. The official website is <a rel="external" target="_blank" href="https://evisa.go.ke/" aria-label="official Kenyan tourist visa website">https://evisa.go.ke/</a>. There are a lot of scam website out there, so make sure you use that link.</li>
 			</ul>
 		</section>
@@ -74,14 +74,14 @@
 			<h2>Housing</h2>
 			<p>Facebook groups are a great tool to find housing. Avoid the Kenya Craigslist. It is traumatizing.</p>
 
-			<p>Neighborhoods I would recommend: Parklands, Westlands, Kilimani, Lavington, Kilileshwa, New Kitisuru, and Spring Valley. These are nice, affordable compared to many US cities, and near fun nightlife. For example, I live in Spring Valley in a mansion in a gated community with three flatmates. The rent is $830 per month and includes a gardener, house help that comes three times a week, a backup generator for load shedding, and basic utilities. It's by far the nicest place I've ever lived for one of the cheapest rents.</p>
+			<p>Neighborhoods I would recommend: Parklands, Westlands, Kilimani, Lavington, Kilileshwa, New Kitisuru, and Spring Valley. These are nice, affordable compared to many U.S. cities, and near fun nightlife. For example, I live in Spring Valley in a mansion in a gated community with three flatmates. The rent is $830 per month and includes a gardener, house help that comes three times a week, a backup generator for load shedding, and basic utilities. It's by far the nicest place I've ever lived for one of the cheapest rents.</p>
 
 			<p>There are even nicer neighborhoods in Nairobi: Karen, Runda, Muthaiga, and Gigiri. They tend to be further away from the city center and thus quieter, more like extravagant suburbs. There are also plenty of less expensive places like Githurai and Mitini if you like living in denser mixed-use/apartment buildings.</p>
 		</section>
 
 		<section id="Food">
 			<h2>Food</h2>
-			<p>Ordering food in big cities is easy. Jumia Food and Glovo are the main options in Nairobi. They work the same way Uber Eats does in the US.</p>
+			<p>Ordering food in big cities is easy. Jumia Food and Glovo are the main options in Nairobi. They work the same way Uber Eats does in the U.S.</p>
 
 			<p>Nairobi has ridiculously nice grocery stores. The biggest-box option is Carrefour, and smaller-but-still-nice options are Zucchini and Chandarana. Your selection, like anywhere, will depend mostly on whatever is closest to wherever you live. Grocery delivery is ubiquitous thanks to low delivery prices. I typically use <a rel="external" target="_blank" href="https://www.foodplus.co.ke/whatsapp-orders/">Chandarana</a>, which has a WhatsApp number to which I text my grocery lists. If you like frozen berries, those are sometimes hard to find, but a small chain called Frozen and specific Chandaranas usually have them.</p>
 
@@ -286,7 +286,7 @@
 			<p>A lot of foreigners have the combination of a Schwab bank account and a Chase Sapphire Reserve credit card. Schwab reimburses all ATM fees. The CSR has a hefty fee, but there is a great reimbursement of some amount of travel costs that can quickly make up for it, plus airport lounge access all over the world, and no international transaction fees. I do all my banking with Chase, which has similar benefits to Schwab.</p>
 
 			<h3>Local Currency</h3>
-			<p>Kenya's currency is the shilling, abbreviated KES or KSH, a holdover from British colonial days. For some time, it hovered around 100 KES = $1, making it fairly convenient to convert in your head. It's actually around 135 now, meaning about 75% of the price in shillings is the price in US cents.</p>
+			<p>Kenya's currency is the shilling, abbreviated KES or KSH, a holdover from British colonial days. For some time, it hovered around 100 KES = $1, making it fairly convenient to convert in your head. It's actually around 135 now, meaning about 75% of the price in shillings is the price in U.S. cents.</p>
 
 			<p>You do not need to worry about currency black markets in Kenya. If you don't know what that means, and you're interested in traveling around Africa, take note of Nigeria as an example. The official USD exchange rate in Nigeria is around 460 Naira (NGN) per USD, and banks and forex businesses in Lagos will sell you Naira at that rate. However, if you walk outside the bank, you will quickly find a teller willing to buy dollars for 750 NGN/USD. This is because Nigeria fixes their exchange rate to the dollar, but restricts the flow of capital. In Kenya, the best exchange rates you'll find are in forex counters in malls, and they won't be much better than those at the airport.</p>
 
@@ -304,33 +304,35 @@
 
 			<p>You can only use M-Pesa if you have a Safaricom SIM card. Thankfully, you can buy a SIM card at any Safaricom store building for about $1. You will need your passport to register.</p>
 
-			<p>There are many apps that can send money from your US accounts to your M-Pesa account. I use one called <a rel="external" target="_blank" href="https://www.sendwave.com/">Sendwave</a>, and there are a lot of people who use WorldRemit too.</p>
+			<p>There are many apps that can send money from your U.S. accounts to your M-Pesa account. I use one called <a rel="external" target="_blank" href="https://www.sendwave.com/">Sendwave</a>, and there are a lot of people who use WorldRemit too.</p>
 			
 			<h3>Taxes</h3>
 			<p>The following is not tax advice. This is just my understanding as an uneducated person.</p>
 
-			<p>It's a common myth that US citizens always have to pay US income tax even if they work abroad. The truth is more complicated, and thankfully better, than that. If you really live out of the US, you don't have to pay US Federal Income Tax. You still contribute to FICA/Medicare/Medicaid. You just have to declare that you meet one of the following two conditions, and then your company's US accountant won't withhold income tax from your monthly paychecks, and you won't owe any of it come April 15:</p>
+			<p>It's a common myth that U.S. citizens always have to pay U.S. income tax even if they work abroad. The truth is more complicated, and thankfully better, than that. If you really live out of the U.S., you don't have to pay U.S. Federal Income Tax. You still contribute to FICA/Medicare/Medicaid. You just have to declare that you meet one of the following two conditions, and then your company's U.S. accountant won't withhold income tax from your monthly paychecks, and you won't owe any of it come April 15:</p>
 			<ul>
 				<li>Physical presence: if you're out of the U.S. for 330 days in a year</li>
-				<li>Bona fide residency: it's fuzzier, but basically if you can show that you really do live abroad, like with a lease and utility payments</li>
+				<li>Bona fide residency: it's fuzzier, but basically if you can show that you really do live abroad, like with a lease and utility payments, for an uninterrupted period that includes an entire tax year</li>
 			</ul>
 
-			<p>The bummer of a flipside is that you will have Kenyan income tax deducted from your salary, and the brackets are steeper and higher than in the U.S. So, the good news is you won't be double-taxed like a lot of the internet says, but the bad news is you'll pay a higher effective tax rate than in the US. Taxes build roads, and roads build economies!</p>
+			<p>Unless you move from the U.S. to Kenya during January and don't leave for the entire year, you probably won't be able to fulfill either of these requirements for your first year in Kenya, so you will likely have to pay U.S. income taxes for your first year. That said, you won't have to pay Kenyan income taxes on any income earned before you get your work permit, so you should be able to avoid double taxation.</p>
 
-			<p>Your only action step is to fill out <a rel="external" target="_blank" href="https://www.irs.gov/forms-pubs/about-form-673">IRS Form 673</a> and submit it to your company's accountant. US states usually have similar forms exempting you from paying state income taxes. For example, Arizona's is AZ Form 309.</p>
+			<p>Unfortunately, the Kenyan income tax brackets are steeper and higher than in the U.S.: the marginal tax rate in Kenya is 30% and applies to all income over $2,800 annually. So, the good news is you won't be double-taxed like a lot of the internet says, but the bad news is you'll pay a higher effective tax rate than in the U.S. Taxes build roads, and roads build economies!</p>
+
+			<p>Your only action step is to fill out <a rel="external" target="_blank" href="https://www.irs.gov/forms-pubs/about-form-673">IRS Form 673</a> and submit it to your company's accountant. U.S. states usually have similar forms exempting you from paying state income taxes. For example, Arizona's is AZ Form 309.</p>
 		</section>
 
 		<section id="Phone">
 			<h2>Phone</h2>
-			<p>Phone numbers in a lot of countries around the world do something that we don't do in the US: they always start with a 0 when called domestically, but that 0 drops off when a country code is added. For example, a phone number in Kenya is 0123456789. If you want to call that from any other country, you need to dial +254123456789. I strongly advise saving all phone numbers with their country codes. Dialing +254xxxxxxxxx from inside Kenya works the same as dialing 0xxxxxxxxx, and then you're never confused later when you're in some other country.</p>
+			<p>Phone numbers in a lot of countries around the world do something that we don't do in the U.S.: they always start with a 0 when called domestically, but that 0 drops off when a country code is added. For example, a phone number in Kenya is 0123456789. If you want to call that from any other country, you need to dial +254123456789. I strongly advise saving all phone numbers with their country codes. Dialing +254xxxxxxxxx from inside Kenya works the same as dialing 0xxxxxxxxx, and then you're never confused later when you're in some other country.</p>
 
 			<p>In most of East Africa, phone numbers are 9 digits long plus either the preceding 0 or country code (+254, +250, etc).</p>
 
-			<p>There is a whole system that we use a lot called USSD. I've never seen it used in the US, though it does exist as an international standard. It's a free way to send data between your phone and the telco and it is used for everything over here. You activate it by calling a phone number that begins with a * and ends with a #. For example, I call *100# to pull up a menu about prepaid data packages that I can buy with my airtime. I usually use the official <a rel="external" target="_blank" href="https://www.safaricom.co.ke/personal/value-added-services/information-services/mysafaricom-app">Safaricom</a> and <a rel="external" target="_blank" href="https://www.safaricom.co.ke/index.php/personal/value-added-services/information-services/m-pesa-app">M-Pesa</a> apps instead of USSD menus.</p>
+			<p>There is a whole system that we use a lot called USSD. I've never seen it used in the U.S., though it does exist as an international standard. It's a free way to send data between your phone and the telco and it is used for everything over here. You activate it by calling a phone number that begins with a * and ends with a #. For example, I call *100# to pull up a menu about prepaid data packages that I can buy with my airtime. I usually use the official <a rel="external" target="_blank" href="https://www.safaricom.co.ke/personal/value-added-services/information-services/mysafaricom-app">Safaricom</a> and <a rel="external" target="_blank" href="https://www.safaricom.co.ke/index.php/personal/value-added-services/information-services/m-pesa-app">M-Pesa</a> apps instead of USSD menus.</p>
 
 			<p>In Kenya, WhatsApp is ubiquitous among people with smartphones, but many people still use SMS and plain-old-telephone-service phone calls.</p>
 
-			<p>I recommend <a rel="external" target="_blank" href="https://support.google.com/voice/answer/1065667?hl=en">porting your US number to Google Voice</a> before you leave. There's a one-time fee for that, but then you have your US number always online without paying any monthly fee. Through the Google Voice app and website, you can make calls and send SMSs. You will want this for receiving OTPs and such for your various US accounts. It's also great to make sure that no messages or calls from your friends or family in the US ever get lost. If you have already left the US and have yet to port your number, you will need to use a VPN. Note that you will not be able to port your number back to your cell network after you sign up for Google Voice.</p>
+			<p>I recommend <a rel="external" target="_blank" href="https://support.google.com/voice/answer/1065667?hl=en">porting your U.S. number to Google Voice</a> before you leave. There's a one-time fee for that, but then you have your U.S. number always online without paying any monthly fee. Through the Google Voice app and website, you can make calls and send SMSs. You will want this for receiving OTPs and such for your various U.S. accounts. It's also great to make sure that no messages or calls from your friends or family in the U.S. ever get lost. If you have already left the U.S. and have yet to port your number, you will need to use a VPN. Note that you will not be able to port your number back to your cell network after you sign up for Google Voice.</p>
 		</section>
 
 		<section id="Transportation">
@@ -384,14 +386,14 @@
 
 			<p>For emergency hospital services, I recommend Aga Khan Hospital or MP Shah Hospital.</p>
 
-			<p>Pharmacies in Kenya are called "chemists." Medication prices relative to the US vary. You can usually buy individual pills without buying an entire package.</p>
+			<p>Pharmacies in Kenya are called "chemists." Medication prices relative to the U.S. vary. You can usually buy individual pills without buying an entire package.</p>
 		</section>
 
 		<section id="Safety">
 			<h2>Safety</h2>
 			<p>Ensuring personal safety and security is a crucial aspect when moving to Kenya as an American. That said, I have never felt in danger in Nairobi. As with any city, the key to staying safe is by staying alert and practicing good common sense.</p>
 
-			<p>The US State Department has a mostly-permanent <a rel="external" target="_blank" href="https://travel.state.gov/content/travel/en/traveladvisories/traveladvisories/kenya-travel-advisory.html">travel advisory</a> for the country, and the details are crucial to traveling safely. Almost always, tourist destinations around Kenya, including most of the safari parks and larger towns on the Swahili coast, are safe. In Nairobi, it is usually not safe to venture into <b>Eastleigh</b> and <b>Kibera</b>, the latter being the largest urban slum in Africa.</p>
+			<p>The U.S. State Department has a mostly-permanent <a rel="external" target="_blank" href="https://travel.state.gov/content/travel/en/traveladvisories/traveladvisories/kenya-travel-advisory.html">travel advisory</a> for the country, and the details are crucial to traveling safely. Almost always, tourist destinations around Kenya, including most of the safari parks and larger towns on the Swahili coast, are safe. In Nairobi, it is usually not safe to venture into <b>Eastleigh</b> and <b>Kibera</b>, the latter being the largest urban slum in Africa.</p>
 
 			<p>As a general rule, northern Kenya is less safe than southern Kenya. I'll give an overview of the relevant northern counties starting in West Pokot, the central county on the border with Uganda, and moving clockwise.</p>
 
@@ -401,9 +403,9 @@
 
 			<p><b>Samburu</b> and <b>Marsabit</b>, the two north-central counties adjacent to Lake Turkana, are famously beautiful, but take care when driving; police have struggled to control highwaymen in the region. I recommend bringing a burner phone and 10,000 KES, about $75, so that, if stopped, you can surrender some valuables without getting out of your vehicle.</p>
 
-			<p>I've never been to any of the counties bordering Somalia; the US State Department prohibits travel there due to "kidnapping and terrorism."</p>
+			<p>I've never been to any of the counties bordering Somalia; the U.S. State Department prohibits travel there due to "kidnapping and terrorism."</p>
 
-			<p>The US State Department also prohibits travel to several "Coastal Areas," but many of the coastal cities remain safe and wonderful vacation destinations. I'll talk about coastal travel advice in a later section.</p>
+			<p>The U.S. State Department also prohibits travel to several "Coastal Areas," but many of the coastal cities remain safe and wonderful vacation destinations. I'll talk about coastal travel advice in a later section.</p>
 		</section>
 
 		<section id="Leisure">
