--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -48,6 +48,7 @@
 				<ul>
 					<li><a href="#Immigration">Visa and Work Permit</a></li>
 					<li><a href="#Housing">Housing</a></li>
+					<li><a href="#Electricity">Electricity</a></li>
 					<li><a href="#Food">Food</a></li>
 					<li><a href="#Language">Language and Social Etiquette</a></li>
 					<li><a href="#Money">Currency and Money</a></li>
@@ -77,6 +78,20 @@
 			<p>Neighborhoods I would recommend: Parklands, Westlands, Kilimani, Lavington, Kilileshwa, New Kitisuru, and Spring Valley. These are nice, affordable compared to many U.S. cities, and near fun nightlife. For example, I live in Spring Valley in a mansion in a gated community with three flatmates. The rent is $830 per month and includes a gardener, house help that comes three times a week, a backup generator for load shedding, and basic utilities. It's by far the nicest place I've ever lived for one of the cheapest rents.</p>
 
 			<p>There are even nicer neighborhoods in Nairobi: Karen, Runda, Muthaiga, and Gigiri. They tend to be further away from the city center and thus quieter, more like extravagant suburbs. There are also plenty of less expensive places like Githurai and Mitini if you like living in denser mixed-use/apartment buildings.</p>
+		</section>
+
+		<section id="Electricity">
+			<h2>Electricity</h2>
+			<p>Kenya's electrical grid connects more than half of the country's residents, including almost everywhere in Nairobi, and the majority of energy is renewable, coming primarily from hydroelectric and geothermal sources.</p>
+			
+			<p>Outlets are IEC Type G, the same as in the U.K., and provide a standard voltage of 240 V at 50 Hz. Check your appliances before you bring them to Kenya, especially high-power ones like blenders or blowdriers, to ensure they can operate at 240 V at 50 Hz. Inexpensive adapters are available at many stores, including large grocery stores, but they don't necessarily transform the voltage and frequency.</p>
+
+			<figure>
+				<img class="img-center" src="https://upload.wikimedia.org/wikipedia/commons/c/c7/UK_BS_1363_plug_and_socket_%28IEC_Type_G%29.png" alt="UK BS 1363 plug and socket (IEC Type G)">
+				<figcaption>Source: Ukpluggerrr, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons</figcaption>
+			</figure>
+
+			<p>The Nairobi grid is decently reliable. Depending on where you are in the city, power outages can occur for a few hours every few days. Many nicer establishments and homes have backup diesel generators that kick on during power cuts.</p>
 		</section>
 
 		<section id="Food">
@@ -333,6 +348,20 @@
 			<p>In Kenya, WhatsApp is ubiquitous among people with smartphones, but many people still use SMS and plain-old-telephone-service phone calls.</p>
 
 			<p>I recommend <a rel="external" target="_blank" href="https://support.google.com/voice/answer/1065667?hl=en">porting your U.S. number to Google Voice</a> before you leave. There's a one-time fee for that, but then you have your U.S. number always online without paying any monthly fee. Through the Google Voice app and website, you can make calls and send SMSs. You will want this for receiving OTPs and such for your various U.S. accounts. It's also great to make sure that no messages or calls from your friends or family in the U.S. ever get lost. If you have already left the U.S. and have yet to port your number, you will need to use a VPN. Note that you will not be able to port your number back to your cell network after you sign up for Google Voice.</p>
+
+			<p>Here is a list of apps I recommend installing on your smartphone:</p>
+			<ul>
+				<li><a rel="external" target="_blank" href="https://www.safaricom.co.ke/personal/value-added-services/information-services/mysafaricom-app">Safaricom</a>: buying airtime and data</li>
+				<li><a rel="external" target="_blank" href="https://www.safaricom.co.ke/index.php/personal/value-added-services/information-services/m-pesa-app">M-Pesa</a>: mobile money</li>
+				<li><a rel="external" target="_blank" href="https://www.sendwave.com/">Sendwave</a>: send money from your U.S. bank account to your M-Pesa wallet</li>
+				<li><a rel="external" target="_blank" href="https://www.whatsapp.com/download/">WhatsApp</a>: messaging and calling</li>
+				<li><a rel="external" target="_blank" href="https://bolt.eu/">Bolt</a>: rideshare app like Uber</li>
+				<li><a rel="external" target="_blank" href="https://lens.google/">Google Lens</a>: OCR and translator for written Kiswahili</li>
+				<li><a rel="external" target="_blank" href="https://www.worldtimebuddy.com/mobile-app">Time Buddy</a>: keep track of the time in various parts of the world</li>
+				<li><a rel="external" target="_blank" href="https://www.jumia.co.ke/">Jumia</a>: Kenya's version of Amazon</li>
+				<li><a rel="external" target="_blank" href="https://food.jumia.co.ke/">Jumia Food</a> and <a rel="external" target="_blank" href="https://glovoapp.com/">Glovo</a>: food delivery</li>
+				<li><a rel="external" target="_blank" href="https://voice.google.com/">Google Voice</a>: maintaining your U.S. number</li>
+			</ul>
 		</section>
 
 		<section id="Transportation">
@@ -393,7 +422,7 @@
 			<h2>Safety</h2>
 			<p>Ensuring personal safety and security is a crucial aspect when moving to Kenya as an American. That said, I have never felt in danger in Nairobi. As with any city, the key to staying safe is by staying alert and practicing good common sense.</p>
 
-			<p>The U.S. State Department has a mostly-permanent <a rel="external" target="_blank" href="https://travel.state.gov/content/travel/en/traveladvisories/traveladvisories/kenya-travel-advisory.html">travel advisory</a> for the country, and the details are crucial to traveling safely. Almost always, tourist destinations around Kenya, including most of the safari parks and larger towns on the Swahili coast, are safe. In Nairobi, it is usually not safe to venture into <b>Eastleigh</b> and <b>Kibera</b>, the latter being the largest urban slum in Africa.</p>
+			<p>The U.S. State Department has a mostly permanent <a rel="external" target="_blank" href="https://travel.state.gov/content/travel/en/traveladvisories/traveladvisories/kenya-travel-advisory.html">travel advisory</a> for the country, and the details are crucial to traveling safely. Almost always, tourist destinations around Kenya, including most of the safari parks and larger towns on the Swahili coast, are safe. In Nairobi, it is usually not safe to venture into <b>Eastleigh</b> and <b>Kibera</b>, the latter being the largest urban slum in Africa.</p>
 
 			<p>As a general rule, northern Kenya is less safe than southern Kenya. I'll give an overview of the relevant northern counties starting in West Pokot, the central county on the border with Uganda, and moving clockwise.</p>
 
