Rm Douglas per his request

--- a/guide-to-kenya.html
+++ b/guide-to-kenya.html
@@ -37,7 +37,7 @@
 
 	<main>
 		<h1>Nairobi Bound: A Comprehensive Guide for Americans Starting a New Life in Kenya's Capital</h1>
-		<p class="date">Posted on May 24, 2023. Cowritten with <a rel="external" target="_blank" href="https://www.linkedin.com/in/douglas-cox/">Douglas Cox</a>.</p>
+		<p class="date">Posted on May 24, 2023. Cowritten with a friend.</p>
 		<figure class="cover">
 			<img src="blog-posts/kenya-cover.jpg" alt="My friends and I on Mount Longonot">
 		</figure>
