--- a/teachbot.html
+++ b/teachbot.html
@@ -75,7 +75,7 @@
 		<section>
 			<h2>Motivation</h2>
 			<p>By 2025, Deloitte and The Manufacturing Institute estimates nearly 3.5 million manufacturing jobs will be needed in the US, but only 1.5 million are expected to be filled. The remaining 2 million jobs will likely not be realized due to a lack of skilled workers trained to work with robots. Despite this dearth in skilled labor, the International Federation of Robotics found that growth in automated manufacturing industries is accelerating. Other countries, particularly those in Europe, fill the gap between labor supply and demand with robust apprenticeship programs that the US notoriously lacks, and this leads domestic manufacturers to outsource system integration to consulting firms. This is both costly and short-term: if the manufacturer needs to tweak or repair the already-integrated automated system, all of the knowledge necessary to do so is external to the organization, so the manufacturer must pay the consultants again to return and modify the system. This absurd process leads us to ask, "Why can't manufacturing workers themselves be trained to perform system integration tasks?"</p>
-			<p>Because I have never worked on a manufacturing line myself, I found customer interviews with the small and medium manufacturing firms we are targeting, extremely helpful. I discovered that an important, intuitive understanding is missing that would enable workers to design and improve manufacturing processes. A solution to this problem must:</p>
+			<p>Customer interviews with small- and medium-sized manufacturing firms were extremely helpful. I discovered that an important, intuitive understanding is missing that would enable workers to design and improve manufacturing processes. A solution to this problem must:</p>
 			<ol>
 				<li><b>Teach workers necessary skills</b> like feedback control,</li>
 				<li><b>Enable workers to perform real tasks</b> like pick-and-place operations,</li>
@@ -104,8 +104,8 @@
 
 		<section>
 			<h2>Moving Forward</h2>
-			<p>The results I've seen are extremely promising. My favorite anecdote from administering human subject tests is watching learners who have never interacted with a robot before evolve from fear and skepticism, observing the TeachBot from several yards away, into excitedly curious and confident explorers, playing with TeachBot's arm and exclaiming "Oh!" as they discover for themselves how a robot could help them do their jobs.</p>
-			<p>We successfully deployed prototypes of the TeachBot system to our industry sponsors, primarily small and medium-sized manufacturers and community colleges in the state of Massachusetts. Today, TeachBot is being used to train the future manufacturing workers of America.</p>
+			<p>The results I've seen are extremely promising. My favorite anecdote from administering human subject tests is watching learners who have never interacted with a robot before evolve from fear and skepticism, observing the TeachBot from several yards away, into excitedly curious and confident explorers, playing with TeachBot's arm, and exclaiming "Oh!" as they discover for themselves how a robot could help them do their jobs.</p>
+			<p>We successfully deployed prototypes of the TeachBot system to our industry sponsors, primarily small and medium-sized manufacturers, and community colleges in the state of Massachusetts. Today, TeachBot is being used to train the future manufacturing workers of America.</p>
 			<p>To learn more about the project, <a rel="external" href="https://www.sciencedirect.com/science/article/pii/S2405844021016868" target="_blank">read our paper</a> and <a href="project-pages/teachbot-poster.pdf" download>download our award-winning poster</a>. All of our software is open source on <a rel="external" aria-label="GitHub repository" href="https://github.com/Darbeloff/TeachBot" target="_blank">GitHub</a>.</p>
 		</section>
 	</main>
