--- a/teachbot.html
+++ b/teachbot.html
@@ -56,7 +56,7 @@
 				<div class="bullet"></div>
 				<div class="skill">HTML/CSS</div>
 				<div class="bullet"></div>
-				<div class="skill">Human-Subject Testing</div>
+				<div class="skill">Human Subject Testing</div>
 				<div class="bullet"></div>
 				<div class="skill">Curriculum Design</div>
 				<div class="bullet"></div>
