battery inverter failure

--- a/line-losses.html
+++ b/line-losses.html
@@ -282,6 +282,7 @@
 				<li>The superior efficiency of three-phase diesel backup generators compared to single-phase ones</li>
 				<li>The ability to use battery inverters of single-phase systems to collaborate to fulfill the total load</li>
 				<li>The existence of three-phase loads, which may require the purchase of additional transformers if the grid is single-phase</li>
+				<li>Three-phase systems with only one battery inverter per phase have no backup mechanisms in the event that a battery inverter fails.</li>
 			</ul>
 		</section>
 	</main>
